--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   background-color: #212121 ;
   margin: 0;
-  color: white;
+  color: red;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
