--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   background-color: #212121 ;
   margin: 0;
-  color: red;
+  color: white;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -18,79 +18,58 @@ body {
   padding-left: 5%;
   padding-right: 5%;
 }
+#progress-loader {
+  display: none;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+}
+
+#progress-loader {
+  width: 150px;
+  background: rgba(236, 236, 238, 0.253);
+  height: 3px;
+  border-radius: 7px;
+}
+
+#progress {
+  content: '';
+  width: 1px;
+  height: 3px;
+  border-radius: 7px;
+  background: rgb(255, 255, 255);
+  transition: 0.5s;
+  animation: loading1274 2s ease infinite;
+}
+
+@keyframes loading1274 {
+  0% {
+    width: 0%;
+}
+
+  10% {
+    width: 10%;
+}
+
+  50% {
+    width: 40%;
+}
+
+  60% {
+    width: 60%;
+}
+
+  100% {
+    width: 100%;
+  }
+}
 
 
 #stem {
   padding-left: 5%;
   padding-right: 5%;
   font-size: small;
-}
-
-
-#ytea {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: fit-content;
- 
-}
-
-#dot-wave {
-  --uib-size: 50px;
-  --uib-speed: 0.6s;
-  --uib-color: #0d0909;
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-  justify-content: space-between;
-  width: var(--uib-size);
-  height: calc(var(--uib-size) * 0.17);
-  padding-top: calc(var(--uib-size) * 0.34);
-}
-
-.dot-wave__dot {
-  flex-shrink: 0;
-  width: calc(var(--uib-size) * 0.17);
-  height: calc(var(--uib-size) * 0.17);
-  border-radius: 50%;
-  background-color: var(--uib-color);
-  will-change: transform;
-}
-
-.dot-wave__dot:nth-child(1) {
-  animation: jump824 var(--uib-speed) ease-in-out
-    calc(var(--uib-speed) * -0.45) infinite;
-}
-
-.dot-wave__dot:nth-child(2) {
-  animation: jump824 var(--uib-speed) ease-in-out
-    calc(var(--uib-speed) * -0.3) infinite;
-}
-
-.dot-wave__dot:nth-child(3) {
-  animation: jump824 var(--uib-speed) ease-in-out
-    calc(var(--uib-speed) * -0.15) infinite;
-}
-
-.dot-wave__dot:nth-child(4) {
-  animation: jump824 var(--uib-speed) ease-in-out infinite;
-}
-
-@keyframes jump824 {
-  0%,
-  100% {
-    transform: translateY(0px);
-  }
-
-  50% {
-    transform: translateY(-200%);
-  }
-}
-
-#loader {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 
