--- a/src/index.css
+++ b/src/index.css
@@ -2,19 +2,13 @@ body {
   background-color: #212121 ;
   margin: 0;
   color: white;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 #root{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-left: auto;
-  margin-right: auto;
   padding-left: 5%;
   padding-right: 5%;
 }
@@ -82,4 +76,26 @@ button {
   font-weight: bold;border-radius: 10px;
   padding-left: 20px;
   padding-right: 20px;
+}
+
+#ytea {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: fit-content;
+}
+
+
+
+@media only screen and (max-width: 600px) {
+  #root{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
+  }
+
+  #Characters{
+    color: aqua;
+  }
 }
