--- a/src/Front/card.css
+++ b/src/Front/card.css
@@ -7,7 +7,7 @@
     text-align: center;
     font-size: large;
     height: 400px;
-    margin-bottom:50%;
+    margin-bottom:2%;
     width: min-content;
     font-weight: bold;
     font-family: Georgia, "Times New Roman", Times, serif;
@@ -66,7 +66,7 @@
     background: rgb(5, 6, 45);
     border-radius: 17px;
     width: 100%;
-    height: 500px;
+    height: min-content ;
   }
 
   .poster {
