--- a/src/Front/card.css
+++ b/src/Front/card.css
@@ -55,7 +55,7 @@
     margin-bottom: 10%;
     font-weight: bold;
     font-family: Georgia, "Times New Roman", Times, serif;
-    background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
+    background-image: linear-gradient(144deg, #2d1f37, #5b42f3 50%, #00ddeb);
   }
 
   .App:hover {
