--- a/src/index.css
+++ b/src/index.css
@@ -129,6 +129,10 @@
     height: 25px;
     text-align: center;
   }
+
+  #stat {
+    float: right;
+  }
 }
 
 
@@ -227,6 +231,7 @@
     border-radius: 10px;
     padding-left: 20px;
     padding-right: 20px;
+    border: 2px solid purple;
   }
 
   #ytea {
@@ -234,33 +239,34 @@
     margin-left: auto;
     margin-right: auto;
     width: fit-content;
+    padding-top: 1%;
+    padding-bottom: 2%;
   }
 
-  #svg {
-    width: 15px;
-    position: relative;
-    right: 86%;
-    top: 6px;
-  }
 
   #searchInput {
     padding-left: 20px;
     border-radius: 200px;
-    border: 1px solid white;
+    border: 3px solid purple;
     width: 100px;
     text-align: center;
+    font-family: 'Shantell Sans';
+    height: 21px;
+    font-size: 18px;
   }
 
   #clout {
-    display: block;
     margin-left: auto;
     margin-right: auto;
     width: fit-content;
+    padding: 2%;
   }
 
-  #menu {
-    position: absolute;
-    border-radius: 0%;
+  svg {
+    width: 15px;
+    position: relative;
+    right: 120px;
+    top: 5px;
   }
 
   #input {
@@ -268,9 +274,24 @@
     border-radius: 50px;
     padding: 0px 5px 0px 5px;
     text-align: center;
+    border: 3px solid purple;
+    height: 21px;
+  }
+
+  #topup {
+  padding-left: 3%;
+  padding-top: 3%;
+  padding-right: 3%;
+  }
+
+  #menu {
+    max-width: fit-content;
+  }
+
+  #stat {
+    max-width: fit-content;
+    float: right;
   }
 }
 
-#stat {
-  float: right;
-}
+
