--- a/Stats/style.css
+++ b/Stats/style.css
@@ -15,7 +15,7 @@ h1 {
 }
 
 #canva {
-    border: 2px solid rgb(51, 7, 163);
+    border: 2px solid purple;
     border-radius: 20px;
     background-color: rgb(249, 242, 232);
      margin-left: 3%;
