--- a/src/Front/card.css
+++ b/src/Front/card.css
@@ -66,7 +66,7 @@
     background: rgb(5, 6, 45);
     border-radius: 17px;
     width: 100%;
-    height: min-content ;
+    height: 480px;
   }
 
   .poster {
