--- a/src/Season/season.css
+++ b/src/Season/season.css
@@ -7,3 +7,13 @@
   margin: 1%;
 }
 
+@media only screen and (max-width: 600px) {
+  .season-info {
+    background: #181818;
+    border-radius: 30px;
+    padding-top: 0.1%;
+    padding-left: 6%;
+    padding-bottom: 6%;
+    margin: 1%;
+  }
+}
