--- a/src/Information/info.css
+++ b/src/Information/info.css
@@ -147,7 +147,7 @@ input::-webkit-inner-spin-button {
   }
 
   #SeasonControl {
-    display: block;
+    display: none;
     position: fixed;
     bottom: 15%;
     margin-left: 5vw;
